--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -1,6 +1,6 @@
 <!-- === MODAL WINDOWS === -->
 <!-- BUY NOW -->
-<div class="backdrop is-hidden js-overlay-modal">
+<div class="backdrop js-overlay-modal">
   <div class="modal" data-modal="1">
     <div class="modal__container modal__container-buy-now">
       <!-- Close button -->
