--- a/src/partials/modal-how-its-made.html
+++ b/src/partials/modal-how-its-made.html
@@ -1,9 +1,9 @@
 <!-- === HOW IT'S MADE === -->
-<div class="backdrop is-hidden">
-  <div class="modal">
+<div class="backdrop js-overlay-modal">
+  <div class="modal" data-modal="2">
     <div class="modal__container modal__container-about">
       <!-- Close button -->
-      <button class="btn modal__close-btn">
+      <button class="btn modal__close-btn js-modal-close">
         <svg class="modal__close-icon" width="20" height="20">
           <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
         </svg>
