--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,10 +1,10 @@
 <!-- === INGREDIENTS === -->
-<div class="backdrop is-hidden">
+<div class="backdrop js-overlay-modal">
   <!-- === Ice-cream green card === -->
-  <div class="modal modal__ice-cream-green">
+  <div class="modal modal__ice-cream-green" data-modal="3">
     <div class="modal__container modal__container-ingredients">
       <!-- Close button -->
-      <button class="btn modal__close-btn">
+      <button class="btn modal__close-btn js-modal-close">
         <svg class="modal__close-icon" width="20" height="20">
           <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
         </svg>
@@ -143,10 +143,10 @@
     </div>
   </div>
   <!-- === Ice coffee yellow card === -->
-  <div class="modal modal__ice-coffee-yellow">
+  <div class="modal modal__ice-coffee-yellow" data-modal="4">
     <div class="modal__container modal__container-ingredients">
       <!-- Close button -->
-      <button class="btn modal__close-btn">
+      <button class="btn modal__close-btn js-modal-close">
         <svg class="modal__close-icon" width="20" height="20">
           <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
         </svg>
@@ -285,10 +285,10 @@
     </div>
   </div>
   <!-- === Milkshake chocolate card === -->
-  <div class="modal modal__milkshake-chocolate">
+  <div class="modal modal__milkshake-chocolate" data-modal="5">
     <div class="modal__container modal__container-ingredients">
       <!-- Close button -->
-      <button class="btn modal__close-btn">
+      <button class="btn modal__close-btn js-modal-close">
         <svg class="modal__close-icon" width="20" height="20">
           <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
         </svg>
