--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -77,7 +77,11 @@
             This is enough to choose ice cream and coffee for any mood!
           </p>
         </div>
-        <button class="btn btn-read-more" type="button">
+        <button
+          class="btn btn-read-more js-open-modal"
+          data-modal="2"
+          type="button"
+        >
           Read more
           <svg class="btn-read-more__icon" width="12" height="12">
             <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
