--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -111,7 +111,11 @@
     </ul>
     <ul class="list contacts__button-list">
       <li class="contacts__button-item">
-        <button class="btn btn-locations" type="button">
+        <button
+          class="btn btn-locations js-open-modal"
+          data-modal="6"
+          type="button"
+        >
           Our Locations
           <svg class="btn-locations__icon" width="12" height="12">
             <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
@@ -119,7 +123,11 @@
         </button>
       </li>
       <li class="contacts__button-item">
-        <button class="btn btn-franchise" type="button">
+        <button
+          class="btn btn-franchise js-open-modal"
+          data-modal="7"
+          type="button"
+        >
           Franchise
           <svg class="btn-locations__icon" width="12" height="12">
             <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
