--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,6 +22,7 @@ $secondaryBgColor: #fcfcfc;
 
 // Border colors
 $contactsBorderColor: #e1e1e1;
+$modalBorderColor: #4e6c50;
 
 // Breakpoints
 $minMobile: 480px;
