--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -46,7 +46,10 @@
     </li>
   </ul>
   <!-- Button Buy now -->
-  <button class="btn btn-buy-now mobile-menu__buy-now">
+  <button
+    class="btn btn-buy-now mobile-menu__buy-now js-open-modal"
+    data-modal="1"
+  >
     Buy now
     <svg class="btn-buy-now__icon" width="12" height="12">
       <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
