--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -1,94 +1,92 @@
 <!-- === FRANCHISE === -->
-<div class="backdrop js-overlay-modal">
-  <div class="modal" data-modal="7">
-    <div class="modal__container modal__container-franchise">
-      <!-- Close button -->
-      <button class="btn modal__close-btn js-modal-close">
-        <svg class="modal__close-icon" width="20" height="20">
-          <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
-        </svg>
-      </button>
-      <!-- Title -->
-      <p class="modal__title modal__title-franchise">
-        Thank you for your interest in owning an Ice Cream shop
-      </p>
-      <!-- Text -->
-      <p class="modal-franchise__text">
-        Due to the overwhelming volume of franchise requests we are not
-        accepting new franchisee applications at this time. Once the application
-        process resumes, we will contact you for further information. Please
-        fill out the contact information below and we will reach out for
-        additional information. We appreciate your patience.
-      </p>
-      <!-- Form -->
-      <form class="modal__form">
-        <ul class="list modal__form-input-list">
-          <li class="modal__form-input-item">
-            <div class="modal__form-field">
-              <label for="user-name"></label>
-              <input
-                class="modal__form-input"
-                type="text"
-                name="user-name"
-                id="user-name"
-                placeholder="Name"
-                pattern="[A-Z][a-z]{1,20}"
-                title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
-                required
-              />
-            </div>
-          </li>
-          <li class="modal__form-input-item">
-            <div class="modal__form-field">
-              <label for="user-phone"></label>
-              <input
-                class="modal__form-input"
-                type="tel"
-                name="user-phone"
-                id="user-phone"
-                placeholder="Phone"
-                pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
-                title="Type (000) 000-00-00 or (000) 000 00 00"
-                required
-              />
-            </div>
-          </li>
-          <li class="modal__form-input-item">
-            <div class="modal__form-field">
-              <label for="user-email"></label>
-              <input
-                class="modal__form-input"
-                type="email"
-                name="user-email"
-                id="user-email"
-                placeholder="Email"
-                pattern="\A\S+@\S+\Z"
-                title="Type email@domain"
-                required
-              />
-            </div>
-          </li>
-          <li class="modal__form-input-item">
-            <div class="modal__form-field">
-              <label for="user-name"></label>
-              <textarea
-                class="modal__form-input comment"
-                type="text"
-                name="comment"
-                id="user-comment"
-                placeholder="Comment"
-              ></textarea>
-            </div>
-          </li>
-        </ul>
+<div class="modal" data-modal="7">
+  <div class="modal__container modal__container-franchise">
+    <!-- Close button -->
+    <button class="btn modal__close-btn js-modal-close">
+      <svg class="modal__close-icon" width="20" height="20">
+        <use href="./images/icons/svg-icons.svg#icon-modal-cross"></use>
+      </svg>
+    </button>
+    <!-- Title -->
+    <p class="modal__title modal__title-franchise">
+      Thank you for your interest in owning an Ice Cream shop
+    </p>
+    <!-- Text -->
+    <p class="modal-franchise__text">
+      Due to the overwhelming volume of franchise requests we are not accepting
+      new franchisee applications at this time. Once the application process
+      resumes, we will contact you for further information. Please fill out the
+      contact information below and we will reach out for additional
+      information. We appreciate your patience.
+    </p>
+    <!-- Form -->
+    <form class="modal__form">
+      <ul class="list modal__form-input-list">
+        <li class="modal__form-input-item">
+          <div class="modal__form-field">
+            <label for="user-name"></label>
+            <input
+              class="modal__form-input"
+              type="text"
+              name="user-name"
+              id="user-name"
+              placeholder="Name"
+              pattern="[A-Z][a-z]{1,20}"
+              title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
+              required
+            />
+          </div>
+        </li>
+        <li class="modal__form-input-item">
+          <div class="modal__form-field">
+            <label for="user-phone"></label>
+            <input
+              class="modal__form-input"
+              type="tel"
+              name="user-phone"
+              id="user-phone"
+              placeholder="Phone"
+              pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
+              title="Type (000) 000-00-00 or (000) 000 00 00"
+              required
+            />
+          </div>
+        </li>
+        <li class="modal__form-input-item">
+          <div class="modal__form-field">
+            <label for="user-email"></label>
+            <input
+              class="modal__form-input"
+              type="email"
+              name="user-email"
+              id="user-email"
+              placeholder="Email"
+              pattern="\A\S+@\S+\Z"
+              title="Type email@domain"
+              required
+            />
+          </div>
+        </li>
+        <li class="modal__form-input-item">
+          <div class="modal__form-field">
+            <label for="user-name"></label>
+            <textarea
+              class="modal__form-input comment"
+              type="text"
+              name="comment"
+              id="user-comment"
+              placeholder="Comment"
+            ></textarea>
+          </div>
+        </li>
+      </ul>
 
-        <!-- Submit button -->
-        <div class="modal__form-field">
-          <button type="submit" class="btn submit-btn modal__submit-button">
-            Submit
-          </button>
-        </div>
-      </form>
-    </div>
+      <!-- Submit button -->
+      <div class="modal__form-field">
+        <button type="submit" class="btn submit-btn modal__submit-button">
+          Submit
+        </button>
+      </div>
+    </form>
   </div>
 </div>
