details in hero added

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -60,13 +60,18 @@
           />
         </picture>
         <div class="hero__text-wrap">
-          <p class="hero__text">
+          <details class="hero__details-text">
+            <summary class="hero__summary-arrow"></summary>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </details>
+          <!-- <p class="hero__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
           <svg class="hero__text-icon" width="40" height="16">
             <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
-          </svg>
+          </svg> -->
         </div>
       </div>
     </div>
