--- a/src/sass/layout/modals/_modal-common.scss
+++ b/src/sass/layout/modals/_modal-common.scss
@@ -33,7 +33,7 @@
 .modal {
   visibility: hidden;
   opacity: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   position: fixed;
   top: 50%;
@@ -52,26 +52,27 @@
   }
 
   // Custom scroll-bar
+
   /* width */
   &::-webkit-scrollbar {
-    width: 15px;
+    width: 10px;
   }
 
   /* Track */
   &::-webkit-scrollbar-track {
-    border-radius: 5px;
-    background: $disabledColor;
+    border-radius: 2px;
+    background-color: $disabledColor;
   }
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background: crimson;
+    border-radius: 2px;
+    background-color: $colorYellow;
   }
 
   /* Handle on hover */
   &::-webkit-scrollbar-thumb:hover {
-    background: yellow;
+    background-color: $colorChocolate;
   }
 
   &__container {
