detailes in hero fixed #1

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,10 +10,14 @@
       <!-- Links styled as buttons -->
       <ul class="list hero__button-list">
         <li class="hero__button-item">
-          <a class="btn-products" href="#products">Products</a>
+          <a class="btn-products hero__btn-styled-link" href="#products"
+            >Products</a
+          >
         </li>
         <li class="hero__button-item">
-          <a class="btn-how-its-made" href="#about">How it’s made?</a>
+          <a class="btn-how-its-made hero__btn-styled-link" href="#about"
+            >How it’s made?</a
+          >
         </li>
       </ul>
       <!-- Plate with ice-creams -->
@@ -60,8 +64,8 @@
           />
         </picture>
         <div class="hero__text-wrap">
-          <details class="hero__details-text">
-            <summary class="hero__summary-arrow"></summary>
+          <details class="hero__details">
+            <summary class="hero__summary"></summary>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </details>
